[package]
name = "kovi-plugin-copycat"
version = "0.1.3"
description = "基于 Kovi 框架的群消息自动复读插件"
authors = ["Hamster5295 <hamster5295@163.com>"]
edition = "2024"
keywords = ["kovi", "plugin"]
license = "MIT"
repository = "https://github.com/Hamster5295/copycat"
documentation = "https://docs.rs/kovi-plugin-copycat"
readme = "README.md"


[lib]
name = "kovi_plugin_copycat"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.98"
kovi = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
